statum-macros/tests/ui/invalid_transition_conditional.stderr
error: Invalid transition return type for `ProcessMachine<Init>::decide`: expected the impl target machine path directly, a source-backed type alias that expands to it, or that same machine path wrapped in a supported `Option`, `Result`, or `Branch` shape.

       Expected:
         fn decide(self) -> ProcessMachine<NextState>

       Actual:
         Decision

       Help:
         return `ProcessMachine<NextState>` directly using the same machine path as the impl target, or use a source-declared type alias that expands to it.
         Supported wrappers are `::core::option::Option<...>`, `::core::result::Result<..., E>`, and `::statum::Branch<..., ...>`, plus ordinary source-declared type aliases that expand to those shapes.
         Imported aliases, macro-generated aliases, include-generated aliases, ambiguous aliases, and foreign machine paths are still rejected because transition introspection only follows source-backed type aliases it can resolve in-module.
  --> tests/ui/invalid_transition_conditional.rs:34:35
   |
34 |     fn decide(self, event: u8) -> Decision {
   |                                   ^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_conditional.rs:41:2
   |
41 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_conditional.rs`
